# game-server

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: docker-image.yml
src/: Connection.h  Game.h  Json.h  Lobby.cpp  Logs.h  Packets.cpp  Player.cpp  Requests.h  Responses.h  Server.h  Utils.h  Validation.h  main.cpp  safe_ptr.h  serialize.h
src/objects/: game.cpp  game.h
src/packets/client/: connection.h  game.h
src/packets/server/: connection.h  game.h  status.h
src/server/: globals.h
src/utils/: reflection.h
